# osc-llm

./: .gitignore  AGENTS.md  README.md  project.yml  pyproject.toml  readme-zh.md
.github/workflows/: publish.yml  ruff.yml
my_llm/: chat.py  cli.py  utils.py
my_llm/llm/: __init__.py
osc_llm/: __init__.py  __main__.py  chat.py  cli.py  config.py  llm.py  prompt_template.py  registry.py  tokenizer.py  utils.py
osc_llm/architectures/: __init__.py  transformer_decoder.py
osc_llm/chat_templates/: __init__.py  base.py  chatglm.py  chatml.py  llama.py
osc_llm/core/: __init__.py  block_manager.py  config.py  llm.py  model_runner.py  sampling_params.py  scheduler.py  sequence.py
osc_llm/demo/: language_model.py
osc_llm/demos/: __init__.py  language_model.py
osc_llm/engines/: __init__.py  base.py  v1.py  v2.py  v3.py
osc_llm/layer/: __init__.py  norm.py
osc_llm/layers/: __init__.py  activation.py  attention.py  dropout.py  embedding.py  feedforward.py  head.py  kv_cache.py  linear.py  normalization.py  sampler.py
osc_llm/llm/: llama.py
osc_llm/llm_engines/: base.py
osc_llm/model_builders/: __init__.py  base.py  chatglm.py  llama.py  qwen.py  qwen2.py  qwen3.py
osc_llm/model_helpers/: __init__.py  base.py  chatglm.py  llama.py  qwen.py
osc_llm/models/: __init__.py  base.py  qwen2.py  qwen3.py
osc_llm/optim/: scheduler.py
osc_llm/optimizers/: __init__.py
osc_llm/quantize/: bnb.py  gptq.py
osc_llm/quantizers/: __init__.py  base.py  int4.py  int8.py
osc_llm/samplers/: __init__.py  base.py  top_k.py  top_p.py
osc_llm/servers/: openai.py
src/osc_llm/: __main__.py  chat.py  tokenizer.py
src/osc_llm/engines/: __init__.py  v1.py  v2.py
src/osc_llm/layers/: __init__.py  activation.py  attention.py  kv_cache.py  linear.py
src/osc_llm/model_helpers/: __init__.py  base.py  qwen.py
src/osc_llm/quantizers/: base.py  int8.py
src/osc_llm/samplers/: top_k.py
src/osc_llm/servers/: openai.py
