[project]
name = "osc-llm"
version = "0.1.6"
description = "轻量级大模型推理工具,专注于模型推理延迟,注重框架易用性和可拓展性。"
readme = "README.md"
authors = [
    { name = "wangmengdi", email = "790990241@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6.0",
    "lightning>=2.2.0",
    "jsonargparse>=4.28.0",
    "wasabi>=1.1.2",
    "confection>=0.1.4",
    "catalogue>=2.0.10",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.19.1",
    "pydantic>=1.10.8",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "safetensors>=0.4.3",
    "modelscope>=1.22.3",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.scripts]
llm = "osc_llm.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
