[project]
name = "osc-llm"
version = "0.1.7"
description = "轻量级大模型推理工具,专注于模型推理延迟,注重框架易用性和可拓展性。"
readme = "README.md"
authors = [
    { name = "wangmengdi", email = "790990241@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    # core
    "torch>=2.8.0",
    "safetensors>=0.4.3",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.19.1",
    "transformers>=4.48.2",
    # 命令行
    "jsonargparse>=4.28.0",
    # config系统
    "confection>=0.1.4",
    "catalogue>=2.0.1",
    # 下载
    "modelscope>=1.22.3",
    # 日志打印
    "wasabi>=1.1.2",
    "loguru>=0.7.3",
    # 其他
    "xxhash>=3.5.0",
]

[project.optional-dependencies]

serve = [
    "pydantic>=1.10.8",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.scripts]
llm = "osc_llm.__main__:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
