[project]
name = "osc-llm"
version = "0.2.4"
description = "轻量级大模型推理工具,专注于模型推理延迟,注重框架易用性和可拓展性。"
readme = "README.md"
authors = [
    { name = "wangmengdi", email = "790990241@qq.com" }
]
requires-python = ">=3.10"
dependencies = [
    # core
    "osc-transformers>=0.2.7",
    # tokenizers
    "tokenizers",
    "sentencepiece",
    # 日志
    "loguru",
    # 下载
    "modelscope",
    "huggingface_hub",
    # others
    "pydantic",
    "jinja2",
]

[project.optional-dependencies]

serve = [
    "pydantic>=1.10.8",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[project.scripts]
llm = "osc_llm.__main__:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
